<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_20_stroke_green_solid_orange"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/no_internet"
                    android:paddingVertical="7dp"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/bg_19_top_solid_green"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:layout_marginHorizontal="32dp"
                    android:text="@string/please_check_your_internet"
                    android:textColor="#272A28"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="23dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="18dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnNo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/riffic_free_bold"
                        android:gravity="center"
                        android:paddingVertical="8dp"
                        android:background="@drawable/bg_12_stroke_green"
                        android:text="@string/no"
                        android:textColor="@color/green_25"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/btnYes"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/riffic_free_bold"
                        android:gravity="center"
                        android:background="@drawable/bg_12_stroke_white_solid_green"
                        android:paddingVertical="8dp"
                        android:text="@string/yes"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>