<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        android:background="@drawable/bg_4_stroke_green_solid_green"
        android:paddingVertical="16dp">

        <!-- mnu_delete -->
        <LinearLayout
            android:id="@+id/mnu_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"

            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_delete_pop" />

            <TextView
                android:id="@+id/tvDelete"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/delete"
                android:textColor="@color/green_25"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp" />

        <!-- mnu_share -->
        <LinearLayout
            android:id="@+id/mnu_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_share_pop" />

            <TextView
                android:id="@+id/tvShare"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/share"
                android:textColor="@color/green_25"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:layout_marginTop="14dp" />



        <!-- mnu_download -->
        <LinearLayout
            android:id="@+id/mnu_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_download_pop" />

            <TextView
                android:id="@+id/tvDownload"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/download"
                android:textColor="@color/green_25"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>