<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_app"
    tools:context=".ui.MyAlbumActivity">
    <!-- layoutActionBar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!-- btnSelectAll -->
    <ImageView
        android:id="@+id/btnSelectAll"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_not_select_all"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutActionBar" />

    <!-- tvSelectAll -->
    <TextView
        android:id="@+id/tvSelectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/select_all"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectAll"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectAll"
        app:layout_constraintTop_toTopOf="@+id/btnSelectAll" />

    <!-- rcvMyAlbum -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvMyAlbum"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/layoutBot"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectAll"
        app:spanCount="2"
        tools:listitem="@layout/item_my_album" />

    <!-- layoutBot -->
    <LinearLayout
        android:id="@+id/layoutBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/btnDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:background="@drawable/bg_12_stroke_white_solid_green"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvDownload"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/riffic_free_bold"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/download"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:background="@drawable/bg_12_stroke_white_solid_green"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvShare"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/riffic_free_bold"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textSize="22sp" />
        </FrameLayout>
    </LinearLayout>

    <!-- No Item-->
    <RelativeLayout
        android:id="@+id/layoutNoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutActionBar">

        <ImageView
            android:id="@+id/imgImage"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img_no_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/no_item_is_here"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>