<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_app"
    tools:context=".ui.SettingsActivity">
    <!-- layoutActionBar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!-- Button -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="4dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">
            <!-- btnLang -->
            <FrameLayout
                android:id="@+id/btnLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_12_stroke_white_solid_green">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginVertical="12dp"
                            android:src="@drawable/ic_lang_set" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="8"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center_vertical"
                        android:text="@string/language"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_more_set" />
                    </FrameLayout>
                </LinearLayout>
            </FrameLayout>

            <!-- btnRate -->
            <FrameLayout
                android:id="@+id/btnRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_12_stroke_white_solid_green">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginVertical="12dp"
                            android:src="@drawable/ic_rate_set" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="8"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center_vertical"
                        android:text="@string/rate_us"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_more_set" />
                    </FrameLayout>
                </LinearLayout>
            </FrameLayout>

            <!-- btnShare -->
            <FrameLayout
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_12_stroke_white_solid_green">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginVertical="12dp"
                            android:src="@drawable/ic_share_set" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="8"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center_vertical"
                        android:text="@string/share_app"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_more_set" />
                    </FrameLayout>
                </LinearLayout>
            </FrameLayout>

            <!-- btnPolicy -->
            <FrameLayout
                android:id="@+id/btnPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_12_stroke_white_solid_green">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginVertical="12dp"
                            android:src="@drawable/ic_policy_set" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="8"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center_vertical"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_more_set" />
                    </FrameLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>